# kotlin_convert

./: BUILD  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE  repositories.bzl
convert/: BUILD
convert/src/com/google/devtools/jvmtools/analysis/: Cfg.kt  InterproceduralAnalysis.kt  Reachability.kt  Store.kt  Tuple.kt  UAnalysis.kt  UForwardTransfer.kt  UTransferFunction.kt
convert/src/com/google/devtools/jvmtools/analysis/mutation/: CollectionMutationAnalysis.kt
convert/src/com/google/devtools/jvmtools/analysis/nullness/: Nullness.kt  NullnessAnalysis.kt  NullnessAnnotations.kt  TypeArgumentVisitor.kt
convert/src/com/google/devtools/jvmtools/convert/psi2k/: JavaPsiUtils.kt  MappedMethod.kt  Psi2kTranslator.kt
convert/src/com/google/devtools/jvmtools/convert/util/: ControlFlow.kt
docs/: contributing.md
