# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(name = "com_github_google_kotlin_convert", version = "0.2.0")

bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "rules_kotlin", version = "2.3.20")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
# Use neverlink deps since this code is designed to run as Android Lint plugin
maven.artifact(
    artifact = "lint-api",
    group = "com.android.tools.lint",
    neverlink = True,
    version = "32.1.0",
)
maven.artifact(
    artifact = "caffeine",
    group = "com.github.ben-manes.caffeine",
    neverlink = True,
    version = "3.2.3",  # newer version than lint-api's dep with nullness annotations
)
maven.install(
    known_contributing_modules = ["com_github_google_kotlin_convert", "protobuf"],
    repositories = [
        "https://maven.google.com/",
        "https://repo.maven.apache.org/maven2/",
    ],
)
use_repo(maven, "maven")

register_toolchains("//:kotlin_toolchain")
